assets/stylesheets/desktop/desktop.scss
.tc-drawer {
  width: 400px;
  max-width: 100vw;
}

.user-card,
.group-card {
  z-index: z("usercard") + 1; // bump up user card
}

.full-page-chat {
  &.teams-sidebar-on {
    grid-template-columns: 1fr;

    .tc-live-pane {
      border-radius: var(--full-page-border-radius);
    }
  }

  .tc-full-page-header {
    padding: 0.5em 1em;
    flex-shrink: 0;
  }

  .tc-live-pane {
    .tc-messages-container {
      .tc-message {
        &.user-info-hidden {
          .tc-meta-data {
            justify-content: flex-start;
            width: var(--message-left-width);
          }
        }

        &.is-reply {
          grid-template-columns: var(--message-left-width) 1fr;
        }

        .tc-avatar {
          width: var(--message-left-width);
        }
      }
    }
  }

  .tc-composer {
    margin: 0;

    .tc-composer-message-details {
      padding-left: 1em;
      padding-right: 1.5em;
    }

    .tc-composer-row {
      .chat-composer-toolbar {
        right: 1em;
      }
    }
  }
}

.tc-composer-row .emoji-picker.opened {
  position: absolute;
  bottom: 40px;
}

.tc-message:not(.user-info-hidden) {
  padding: 0.65em 1em 0.15em;
}

.tc-text {
  img:not(.emoji):not(.avatar) {
    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);

    &:hover {
      cursor: pointer;
      border-radius: 5px;
      box-shadow: 0 2px 5px 0 rgba(var(--always-black-rgb), 0.1),
        0 2px 10px 0 rgba(var(--always-black-rgb), 0.1);
    }
  }
}

.tc-message.user-info-hidden {
  padding: 0.15em 1em;
}

// Full Page Styling in Core
.has-full-page-chat:not(.discourse-sidebar) {
  #main-outlet {
    padding: 0em;
    &.wrap {
      max-width: 1200px;
    }
  }
  .alert-info:last-of-type {
    margin-bottom: 0;
    border-bottom: 1px solid var(--primary-low);
  }
  .full-page-chat {
    border-right: 1px solid var(--primary-low);
    border-left: 1px solid var(--primary-low);
    overflow: hidden;

    .tc-full-page-header {
      padding: 1em 1em 0.5em;
    }

    .tc-channels {
      background: var(--primary-very-low);
      padding-top: 1em;

      .chat-channel-divider {
        padding: 0.5rem 0.5rem 0.5rem 1rem;
      }

      .loading-container {
        padding-bottom: 1em;
      }
    }

    .tc-live-pane {
      border-radius: unset;
    }
    .tc-live-pane,
    .tc-messages-scroll,
    .tc-message:not(.highlighted):not(.deleted) {
      background-color: transparent;
    }
    .tc-message:not(.highlighted):not(.deleted):hover {
      background-color: var(--primary-very-low);
    }
  }

  @media screen and (max-width: 1366px) {
    #main-outlet {
      padding: 0;
      &.wrap {
        max-width: 100%;
      }
    }

    .full-page-chat {
      border: none;
      grid-template-columns: 250px 1fr;
    }
  }
}

// Full page styling with sidebar enabled
.discourse-sidebar.has-full-page-chat {
  #main-outlet {
    padding: 2em 0em 0em 0em;
  }
  .full-page-chat.teams-sidebar-on {
    .tc-live-pane {
      border-radius: 0;
    }
    .tc-live-pane,
    .tc-messages-scroll,
    .tc-message:not(.highlighted) {
      background: transparent;
    }
    .tc-message {
      padding-left: 2em;
      &:hover {
        background-color: var(--primary-very-low);
      }
    }
    .tc-messages-container .tc-message-deleted {
      padding: 0.25em 2em;
    }
  }
}

.chat-browse .chat-channel-settings-row {
  .edit-btn {
    opacity: 0;
    transition: opacity 0.1s;
  }

  &:hover {
    .edit-btn {
      opacity: 1;
    }
  }
}

